--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,14 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta.25/shoelace.css">
+    <link rel="stylesheet" type='text/css' href="{% static 'style.css' %}">
     <title>Programming Biblio</title>
 </head>
 <body>
-    <h1>BOOKSSSSS</h1>
+    <h1 class='header'>FREESHELF</h1>
+    <div class='book-list'>
     {% block content %} {% endblock content %}
-  
+    </div>
 </body>
 </html>
