--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -1,7 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   font-size: 2rem;
   color: white;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: black
 }
 
 .book_list {
