--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta.25/shoelace.css">
-    <link rel="stylesheet" type='text/css' href="{% static 'style.css' %}">
+    <link rel="stylesheet" type='text/css' href="{% static 'css/style.css' %}">
     <title>Programming Biblio</title>
 </head>
 <body>
