add created_by, css tweak

--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -9,6 +9,7 @@
         <dt><a href='{{book.url}}'>{{book.title}}</a></dt>
         <dt>{{book.author}}</dt>
         <dd>{{book.description}}</dd>
+        <dd class='created-date'>Book added: {{book.created_at}}</dd>
         <!-- <dd><a href='{{book.url}}'>Link</a></dd> -->
         
         {% endfor %}
