--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -4,12 +4,20 @@
   padding: 0;
 }
 
+body {
+  color: rgba(0, 0, 0, 0.865)
+}
 .header {
   font-size: 2rem;
   color: white;
-  background-color: black
+  background-color: rgba(0, 0, 0, 0.865);
+  padding: 2rem;
 }
 
 .book_list {
   margin: 20px;
+}
+
+.created-date {
+  color: rgb(128, 128, 128);
 }
