--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -5,7 +5,7 @@
     <dl>
 
         {% for book in books %}
-
+        <h1>{{hello}}</h1>
         <dt><a href='{{book.url}}'>{{book.title}}</a></dt>
         <dt>{{book.author}}</dt>
         <dd>{{book.description}}</dd>
