--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -10,15 +10,19 @@
         <dd>{{book.description}}</dd>
         <dd class='created-date'>Book added: {{book.created_at}}</dd>
         <ul class='categories'>
+            {% if book.category %}
             {% for cat in book.category.all %}
-            <li class='language-category'>{{ cat.name }}</li>
+            <li class='language-category'>
+                <a href="{% url 'cat_list' cat.slug %}">{{ cat.name }}</a>
+            </li>
             {% endfor %}
+            {% endif %}
         </ul>
-        
+
 
         {% endfor %}
     </dl>
-        
+
 {% endblock content %}
 
 
