--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  color: rgba(0, 0, 0, 0.865)
+  color: rgba(0, 0, 0, 0.865);
 }
+
 .header {
   font-size: 2rem;
   color: white;
@@ -14,11 +15,43 @@ body {
   padding: 2rem;
 }
 
-.book_list {
-  margin: 20px;
+.header a {
+  color: white;
+}
+
+.book-list {
+  padding: .5rem 1rem ;
+}
+
+.book-list ol,dl,dd {
+  margin-bottom: .2rem;
 }
 
 .created-date {
   color: rgb(128, 128, 128);
   font-size: .5rem;
+}
+
+.categories {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  list-style-type: none;
+}
+
+.language-category a {
+  /* display: inline; */
+  color: whitesmoke;
+  font-size: .85rem;
+  font-weight: 500;
+  background-color: rgb(17, 103, 122);
+  padding: 5px 8px;
+  margin-left: 1rem;
+  border-radius: 13px;
+  white-space: nowrap;
+}
+
+.language-category a:hover {
+  color: white;
+  background-color: rgb(22, 136, 161);
 }
