--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,7 +10,7 @@
     <title>Programming Biblio</title>
 </head>
 <body>
-    <h1 class='header'>FREESHELF</h1>
+    <h1 class='header'><a href="{% url 'book_list' %}">FREESHELF</a></h1>
     <div class='book-list'>
     {% block content %} {% endblock content %}
     </div>
