--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,6 +12,7 @@
 <body>
     <h1 class='header'>FREESHELF</h1>
     <div class='book-list'>
+        <!-- Pull down menu -->
     {% block content %} {% endblock content %}
     </div>
 </body>
