Sorting options added to list and category pages

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,9 +12,10 @@
     <title>Programming Biblio</title>
 </head>
 <body>
-    <h1 class='header'><a href="{% url 'book_list' %}">FREESHELF</a></h1>
+    <h1 class='header'>
+        <a href="{% url 'book_list' %}">FREESHELF</a>
+    </h1>
     <div class='book-list'>
-        <!-- Pull down menu -->
     {% block content %} {% endblock content %}
 
     </div>
