--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -4,16 +4,18 @@
 
 <div class='book-list'>
 
-    <div class="dropdown">
-        <button type="button" class="dropdown-trigger">Sort by</button>
-        <div class="dropdown-menu">
-            <a href="{{request.path}}/sort/created_at">Date Added</a>
-            <a href="{{request.path}}/sort/created_at_reverse">Date Added reverse</a>
-            <a href="{{request.path}}/sort/title">Title</a>
-            <a href="{{request.path}}/sort/author">Author</a>
+    <div class="suggestion-box">
+        <div class="dropdown">
+            <button type="button" class="dropdown-trigger">Sort by</button>
+            <div class="dropdown-menu">
+                <a href="{{request.path}}?sort=date">Date Added (oldest first)</a>
+                <a href="{{request.path}}?sort=date-reverse">Date Added reverse</a>
+                <a href="{{request.path}}?sort=title">Title</a>
+                <a href="{{request.path}}?sort=author">Author</a>
+            </div>
         </div>
+        <span class="suggestion">Click on a language tag to view all books about that language.</span>
     </div>
-    {{request.path}}
 
     <dl>
         {% for book in books %}
@@ -22,11 +24,11 @@
         <dd>{{book.description}}</dd>
         <ul class='categories'>
             {% if book.category %}
-                {% for cat in book.category.all %}
-                <li class='language-category'>
-                    <a href="{% url 'cat_list' cat.slug %}">{{ cat.name }}</a>
-                </li>
-                {% endfor %}
+            {% for cat in book.category.all %}
+            <li class='language-category'>
+                <a href="{% url 'cat_list' cat.slug %}">{{ cat.name }}</a>
+            </li>
+            {% endfor %}
             {% endif %}
         </ul>
         <dd class='created-date'>Book added: {{book.created_at}}</dd>
@@ -34,6 +36,4 @@
         {% endfor %}
     </dl>
 
-{% endblock content %}
-
-
+    {% endblock content %}
