--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -22,6 +22,21 @@ body {
 .header a {
   color: white;
 }
+.suggestion-box {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: left;
+}
+
+.suggestion {
+  font-size: 1.1rem;
+  background-color: rgb(156, 213, 226);
+  padding: 5px 8px;
+  margin-left: 1rem;
+  border-radius: 13px;
+  white-space: nowrap;
+}
 
 .book-list {
   padding: .5rem 1rem ;
