--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -13,10 +13,14 @@ body {
 }
 
 .header {
-  font-size: 2rem;
   color: white;
   background-color: rgba(0, 0, 0, 0.865);
+  width: 100%;
   padding: 2rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header a {
