--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -33,7 +33,16 @@
     <div class='book-container'>
         {% for book in books %}
         <div class='book-box'>
-            <dt><a class='book-title' href='{{book.url}}'>{{book.title}}</a></dt>
+            <dt class='title-container'>
+                <a class='book-title' href='{{book.url}}'>{{book.title}}</a>
+                <div class='click-fav' data-id="{{book.pk}}">
+                    {% if book.pk in favorites %}
+                        <i class='fas fa-star favorite'></i>
+                    {% else %}
+                        <i class="far fa-star non-favorite"></i>
+                    {%endif %}
+                </div>
+            </dt>
             <dt>{{book.author}}</dt>
             <dd>{{book.description}}</dd>
             <ul class='categories'>
@@ -42,7 +51,7 @@
                 <li class='language-category'>
                     <a href="{% url 'cat_list' cat.slug %}">{{ cat.name }}</a>
                 </li>
-            
+
                 {% endfor %}
                 {% endif %}
             </ul>
@@ -51,5 +60,6 @@
 
         {% endfor %}
     </div>
+</div>
 
-    {% endblock content %}
+{% endblock content %}
