--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .book-list {
-  padding: .5rem 1rem ;
+  padding: .5rem 1rem;
   margin: .5rem auto;
 }
 
@@ -41,9 +41,8 @@ body {
   margin-right: 1rem;
 }
 
-.dropdown-trigger,
-.dropdown-menu {
-  box-shadow: 0 2px 5px  rgba(0, 0, 0, 0.475);
+.dropdown-trigger, .dropdown-menu {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
 }
 
 .suggestion-box {
@@ -54,15 +53,15 @@ body {
 
 .suggest-button {
   color: white;
-  background-color:rgb(28, 152, 180);
+  background-color: rgb(28, 152, 180);
   font-weight: bold;
   padding: 8px 12px;
   border-radius: 25px;
   white-space: nowrap;
   height: max-content;
-  box-shadow: 0 2px 5px  rgba(0, 0, 0, 0.475);
-
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
 }
+
 .suggest-button:hover {
   color: whitesmoke;
   background-color: rgb(19, 119, 141);
@@ -80,13 +79,43 @@ body {
   padding: 15px;
   box-shadow: 0 2px 10px 2px rgba(170, 168, 168, 0.214);
 }
-.book-list ol,dl,dd {
+
+.book-list ol, dl, dd {
   margin-bottom: .2rem;
 }
 
 .book-title {
   font-size: 1.25rem;
+  margin-right: .5rem;
 }
+
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+.fav-button {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+}
+
+.favorite {
+  color: rgb(218, 189, 63)
+}
+
+.favorite:hover {
+  color: rgb(252, 233, 67)
+}
+
+.non-favorite {
+  color: rgb(218, 189, 63)
+}
+
+.non-favorite:hover {
+  color: rgb(252, 233, 67)
+
+}
+
 .created-date {
   color: rgb(128, 128, 128);
   font-size: .75rem;
@@ -99,7 +128,6 @@ body {
   flex-flow: row wrap;
   list-style-type: none;
 }
-
 
 .language-category a {
   /* display: inline; */
