--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -35,6 +35,7 @@
         <div class='book-box'>
             <dt class='title-container'>
                 <a class='book-title' href='{{book.url}}'>{{book.title}}</a>
+                {% if user.is_authenticated %}
                 <div class='click-fav' data-id="{{book.pk}}">
                     {% if book.pk in favorites %}
                         <i class='fas fa-star favorite'></i>
@@ -42,6 +43,7 @@
                         <i class="far fa-star non-favorite"></i>
                     {%endif %}
                 </div>
+                {% endif %}
             </dt>
             <dt>{{book.author}}</dt>
             <dd>{{book.description}}</dd>
